--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <main>
+      <h1>Marco Andana</h1>
       <h1>Pokémon Search App</h1>
       <div class="container">
         <form role="search" id="search-form">
